--- a/HomeStyle.css
+++ b/HomeStyle.css
@@ -28,6 +28,7 @@
     border-radius: 10px;
     color: white;
     margin-top: 29%;
+    padding-bottom: auto;
     font-size: 200%;
 }
 .bgpic{
@@ -51,10 +52,8 @@
     border: none;
     border-radius: 10px;
     color: white;
-    margin-top: 29%;
     font-size: 200%;
 }
-.btn{
-    padding-left: 30%;
-    padding-bottom: 10%;
+.btncongfig{
+
 }
