--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 
 .textH{
     text-align: center;
-    font-size: 50px;
+    font-size: clamp(12px, 2.5vw, 50px);
 }
 
 h2 {
@@ -39,4 +39,16 @@ h2 {
 }
 .textNav{
     color: white;
+}
+
+.card{
+    pointer-events: all;
+    position: relative;
+    text-decoration-line: none;
+    text-transform: uppercase;
+    vertical-align: middle;
+}
+
+h3{
+    font-size: clamp(12px, 2.5vw, 50px);
 }
